--- a/stylesheets/main.css
+++ b/stylesheets/main.css
@@ -10,6 +10,10 @@ body {
 	font-size: 40px;
 }
 
+.cb {
+    clear: both;
+}
+
 a:link {color:#FFF; text-decoration: none;}      /* unvisited link */
 a:visited {color:#FFF; text-decoration: none;}  /* visited link */
 a:hover {color:#777; text-decoration: none;}  /* mouse over link */
