--- a/stylesheets/main.css
+++ b/stylesheets/main.css
@@ -438,8 +438,8 @@ p {
 
 #aboutText {
 	font-size: 16px;
-	max-width: 350px;
-	padding: 0px;
+	max-width: 960px;
+	padding: 20px 0px 0px 0px;
 }
 
 #aboutImg {
