--- a/stylesheets/main.css
+++ b/stylesheets/main.css
@@ -437,9 +437,9 @@ p {
 }
 
 #aboutText {
-	font-size: 16px;
+	font-size: 14px;
 	max-width: 960px;
-	padding: 20px 0px 0px 0px;
+	margin: 40px 0px 0px 0px;
 }
 
 #aboutImg {
